# confusius

./: .gitignore  .harper-dictionary.txt  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  NOTICE  README.md  README.rst  convert_raw_to_zarr.py  justfile  pyproject.toml  zensical.toml
.claude/skills/release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs-cleanup-preview.yml  docs.yml  lint.yml  pre-commit_update.yml  publish.yml  test.yml
binder/: Dockerfile
docs/: changelog.md  citing.md  contributing.md  contributors.md  index.md  roadmap.md
docs/api/: bids.md  connectivity.md  datasets.md  decomposition.md  extract.md  glm.md  index.md  io.md  iq.md  plotting.md  qc.md  registration.md  signal.md  validation.md  xarray.md
docs/examples/: README.md  index.md
docs/examples/01_io/: 01_confusius_xarray_101.py  confusius_xarray_101.py
docs/examples/02_decomposition/: fastica_single_recording.py  global_pca_marchenko_pastur_heuristics.py  local_patch_svd_denoising.py  pca_single_recording.py
docs/examples/io/: _section.md  confusius_xarray_101.py  load_autc.py  nunez_quickstart.py
docs/examples/registration/: _section.md  register_volume_two_acquisitions.py
docs/gui/: overview.md  plugin.md
docs/images/gui/: generate.py
docs/images/home/: .gitignore  generate.py
docs/images/qc/: generate.py
docs/images/visualization/: generate.py
docs/includes/: abbreviations.md
docs/javascripts/: theme.js
docs/stylesheets/: extra.css
docs/user-guide/: atlas.md  beamformed-iq.md  connectivity.md  datasets.md  decomposition.md  getting-started.md  glm.md  index.md  installation.md  io.md  multipose.md  quality-control.md  registration.md  signal.md  spatial-conventions.md  spatial.md  statistical-analysis.md  visualization.md  xarray.md
examples/: README.rst
examples/gallery/: README.rst
examples/xarray/: README.rst  plot_xarray_accessor_basics.py
licenses/: LICENSE-Nilearn  LICENSE-transforms3d
pr-preview/pr-134/: 404.html  index.html  objects.inv  search.json  sitemap.xml
pr-preview/pr-134/api/: index.html
pr-preview/pr-134/changelog/: index.html
pr-preview/pr-134/citing/: index.html
pr-preview/pr-134/contributing/: index.html
pr-preview/pr-134/examples/: index.html
pr-preview/pr-134/javascripts/: mermaid.mjs
pr-preview/pr-134/stylesheets/: extra.css
src/confusius/: __init__.py  _cli.py  _utils.py  timing.py
src/confusius/_napari/: _data_panel.py  _export.py  _qc_panel.py  _qc_plots.py  _readers.py  _save_panel.py  _theme.py  _time_overlay.py  _time_series_manager.py  _time_series_panel.py  _time_series_plotter.py  _time_series_store.py  _tour.py  _utils.py  _video_panel.py  _widget.py
src/confusius/_utils/: __init__.py  atlas.py  coordinates.py  io.py  plotting.py  stack.py  timing.py
src/confusius/atlas/: _structures.py  atlas.py
src/confusius/bids/: __init__.py  coordinates.py  mapping.py  validation.py
src/confusius/connectivity/: __init__.py  caps.py  matrix.py  seed.py
src/confusius/datasets/: __init__.py  _cybis_pereira_2026.py  _nunez_elizalde_2022.py  _osf.py  _pooch.py  _registry.py  _utils.py
src/confusius/decomposition/: __init__.py  _base.py  fastica.py  pca.py
src/confusius/extract/: __init__.py  labels.py  mask.py  reconstruction.py  unmask.py
src/confusius/glm/: __init__.py  _contrasts.py  _design.py  _hrf_models.py  _models.py  _utils.py  first_level.py  second_level.py
src/confusius/io/: __init__.py  autc.py  echoframe.py  loadsave.py  nifti.py  scan.py  utils.py
src/confusius/iq/: __init__.py  clutter_filters.py  process.py
src/confusius/multipose/: __init__.py  consolidate.py  slice_timing.py
src/confusius/plotting/: __init__.py  _hover.py  _utils.py  image.py  napari.py
src/confusius/qc/: __init__.py  dvars.py  tsnr.py
src/confusius/registration/: __init__.py  _progress.py  _utils.py  affines.py  bspline.py  diagnostics.py  motion.py  resampling.py  volume.py  volumewise.py
src/confusius/signal/: __init__.py  _utils.py  censor.py  clean.py  confounds.py  core.py  detrending.py  filters.py  standardization.py
src/confusius/spatial/: smooth.py
src/confusius/validation/: __init__.py  coordinates.py  iq.py  mask.py  time_series.py
src/confusius/xarray/: __init__.py  accessors.py  affine.py  connectivity.py  extract.py  io.py  iq.py  plotting.py  registration.py  scale.py
tests/: conftest.py
tests/integration/test_gallery/: conftest.py  test_build_gallery.py  test_cli.py
tests/integration/test_io/: conftest.py  test_autc_conversion.py  test_echoframe_conversion.py
tests/unit/: conftest.py  test_bids.py  test_lazy_imports.py  test_timing.py  test_utils.py
tests/unit/test_atlas/: test_atlas.py
tests/unit/test_connectivity/: test_cap.py  test_seed.py
tests/unit/test_datasets/: test_cybis_pereira_2026.py  test_nunez_elizalde_2022.py  test_osf.py  test_registry.py
tests/unit/test_decomposition/: __init__.py  test_fastica.py  test_pca.py
tests/unit/test_extract/: test_labels.py  test_mask.py
tests/unit/test_gallery/: conftest.py  test_cache.py  test_discover.py  test_execute.py  test_index.py  test_render.py
tests/unit/test_glm/: conftest.py  test_contrasts.py  test_design.py  test_errors.py  test_first_level.py  test_models.py  test_second_level.py  test_utils.py
tests/unit/test_io/: __init__.py  test_autc.py  test_echoframe.py  test_loadsave.py  test_nifti.py  test_scan.py  test_utils.py
tests/unit/test_iq/: __init__.py  conftest.py  test_clutter_filters.py  test_process.py
tests/unit/test_multipose/: __init__.py  conftest.py  test_consolidate.py  test_slice_timing.py
tests/unit/test_napari/: conftest.py  test_click_to_navigate.py  test_qc_panel.py  test_readers.py  test_signal_manager.py  test_signal_plotter.py  test_signal_store.py  test_utils.py  (+5 more)
tools/: build_gallery.py
tools/gallery/: README.md  _pipeline.py  _types.py  cache.py  discover.py  execute.py  index.py  render.py
(+84 files in other folders)
