[project]
name = "confusius"
version = "0.0.1-a4"
description = "Python package for analysis and visualization of functional ultrasound imaging data."
readme = "README.md"
license = "BSD-3-Clause AND Apache-2.0 AND BSD-2-Clause"
license-files = ["LICENSE", "licenses/*"]
authors = [
    { name = "Samuel Le Meur-Diebolt", email = "samuel@diebolt.io" }
]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "dask[complete]>=2025.9.0",
    "h5py>=3.15.1",
    "ipython>=9.6.0",
    "joblib>=1.5.2",
    "joblib-progress>=1.0.6",
    "matplotlib>=3.10.7",
    "napari[all]>=0.6.6",
    "nibabel>=5.0.0",
    "numpy>=2.3.4",
    "rich>=14.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.16.3",
    "simpleitk>=2.5.3",
    "xarray[complete]>=2025.1.0",
    "zarr>=3.1.3",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "codespell>=2.3.0",
    "numpydoc>=1.9.0",
    "prek>=0.2.0,<0.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.10,<0.1.0",
    "zensical>=0.0.21",
    "mkdocstrings[python]>=1.0.3",
]

[tool.numpydoc_validation]
exclude = [
    '\.__init__$',
    '\._.*$',
]
checks = [
    "all",  # Report on all checks, except the below
    "GL01",
    "ES01",
    "SA01",
    "EX01",
]
numpydoc_validation_checks = ["all", "GL01", "ES01", "SA01", "EX01"]

[tool.ruff]
exclude = ["benchmark/*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes.
    "--strict-markers",       # Raise error on unknown markers.
    "--strict-config",        # Raise error on config issues.
    "--showlocals",           # Show local variables in tracebacks.
    "--cov=confusius",        # Enable coverage for confusius module.
    "--cov-report=term-missing",  # Show missing lines in terminal.
    "--cov-report=html",      # Generate HTML coverage report.
    "--cov-report=xml",       # Generate XML coverage report (for CI).
]
# Ignore deprecation warnings from itertools in Python 3.13 standard library.
# These are triggered by pytest plugins during test execution.
# Ignore SWIG-generated type warnings from SimpleITK.
filterwarnings = [
    "ignore::DeprecationWarning:copy",
    "ignore:builtin type.*[Ss]wig.*:DeprecationWarning",
]
